# stm32f4_dockerbuild

./: .clang-format  .dockerignore  .gitignore  .install_stlink.sh.swp  .mxproject  .test.sh.swp  CMakeCache.txt  CMakeLists.txt  CMakeVars.config  Dockerfile  License  Makefile  README.md  backupDONOTREMOVE_UNTIL_CARL_SAYS_SO  build.c  build.py  build.sh  build_linux.sh  compile_commands.json  docker_build.py  docker_build.sh  flash_device.cfg  flash_device.sh  install_stlink.sh  low_power_cube_project.ioc  replace.tmp  rimot-lowpower-sensorboard.ioc  rimot-lowpower-sourcetrail.srctrldb  stm32f411discovery.cfg  system_startup.s  updateIARconfig.c
Application/Inc/: interrupts.h  main.h
Application/Src/: interrupts.c  main.c
Backup/: usbd_cdc_if.c
Binaries/: firmware
CMake/: CMakeLists.txt  CMakeVars.config
CMake/Modules/: gdb-helper.cmake  stm32f411xe.cmake  toolchain-arm-none-eabi.cmake
CMake/Modules/Compiler/: CMakeCommonCompilerMacros.cmake
CMake/Modules/Compiler/ARMGCC/: ARMGCC.cmake
CMake/Modules/Compiler/GCC/: GCC.cmake
CMake/Modules/Compiler/IAR/: IAR-C.cmake  IAR-FindBinUtils.cmake  IAR.cmake  readme  toolchain-iar.cmake
CMake/Modules/Compiler/IAR_OLD/: IAR-ASM.cmake  IAR.cmake
CMake/Modules/Compiler/arm-none-eabi-gcc/: binutils-arm-none-eabi.cmake  gdb-helper.cmake  toolchain-arm-none-eabi.cmake
CMake/Modules/Logging/: pipeline_logging.cmake
CMake/Modules/Testing/: testing.cmake
CMake/Modules/Toolchains/: setup_toolchain.cmake
CMake/Modules/Toolchains/IAR/: IAR-CXX.cmake  IAR-DetermineCompiler.cmake  IAR-FindBinUtils.cmake
CMakeModules/Compiler/: IAR-ASM.cmake  IAR-C.cmake  IAR-CXX.cmake  IAR.cmake
CMakeModules/SystemTools/: findMake.cmake
CMakeModules/Testing/: testing.cmake
Drivers/: CMakeLists.txt
Drivers/Chipset/: processor_select.c  processor_select.h
EWARM/: lp_sensorboard.dep  lp_sensorboard.ewd  lp_sensorboard.ewp  lp_sensorboard.ewt  lp_sensorboard.eww  lp_sensorboard.icf  rimot-lowpower-sensorboard.dep  rimot-lowpower-sensorboard.ewd  rimot-lowpower-sensorboard.ewp  rimot-lowpower-sensorboard.ewt  rimot-lowpower-sensorboard.eww  startup_stm32f303x8.s  stm32f303x8_flash.icf
EWARM/settings/: Project.wsdt  carls_lpsensor_workspace.wsdt  lp_sensorboard.Debug.cspy.bat  lp_sensorboard.Debug.cspy.ps1  lp_sensorboard.Debug.driver.xcl  lp_sensorboard.Debug.general.xcl  lp_sensorboard.dbgdt  lp_sensorboard.dnx  lp_sensorboard.wsdt  rimot-lowpower-sensorboard.Debug.cspy.bat  rimot-lowpower-sensorboard.Debug.cspy.ps1  rimot-lowpower-sensorboard.Debug.driver.xcl  rimot-lowpower-sensorboard.Debug.general.xcl  rimot-lowpower-sensorboard.USE_HAL_DRIVER.cspy.ps1  rimot-lowpower-sensorboard.USE_HAL_DRIVER.driver.xcl  rimot-lowpower-sensorboard.USE_HAL_DRIVER.general.xcl  rimot-lowpower-sensorboard.dbgdt  rimot-lowpower-sensorboard.dnx  rimot-lowpower-sensorboard.rimot-lowpower-sensorboard.cspy.bat  rimot-lowpower-sensorboard.rimot-lowpower-sensorboard.cspy.ps1  rimot-lowpower-sensorboard.rimot-lowpower-sensorboard.driver.xcl  rimot-lowpower-sensorboard.rimot-lowpower-sensorboard.general.xcl  rimot-lowpower-sensorboard.wsdt  workspace.wsdt
Examples/: Makefile  example.c  linker.ld  main.hex
Firmware/: CMakeLists.txt
Firmware/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
Firmware/Src/: gpio.c  main.c  stm32f4xx_it.c
Inc/: main.h  tim.h
Linting/: file_to_include.h  file_to_test_formatting.c  file_to_test_formatting.h  format.yml
Middeware/Src/: leds.c
Middleware/: middlewares.h
OpenOCD/: stm32f411discovery.cfg
Pipeline/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Scripts/: build.sh  build_linux.sh  flash_device.sh  install_arm_none_eabi_toolchain.sh  install_cmake.sh  install_openocd.sh  install_stlink.sh
Source_Code/: CMakeLists.txt  arm-none-eabi-toolchain.cmake
Source_Code/Compat/: openocd_compat.c
Source_Code/Drivers/: CMakeLists.txt
Source_Code/Drivers/CMSIS/Device/ST/STM32F4xx/Include/: stm32f4xx.h
Source_Code/Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/: system_stm32f4xx.c
Source_Code/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_gpio.h
Source_Code/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_gpio.c
Source_Code/Firmware/: CMakeLists.txt
Source_Code/Firmware/Inc/: FreeRTOSConfig.h  bootjump.h  compiler.h  main.h  pinConfig.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  task_defs.h
Source_Code/Firmware/Inc/Utils/: jsmn.h  json_utils.h  systemConfig.h
Source_Code/Firmware/Inc/task_defs/: analogInputTaskDefs.h  defaultTaskDefs.h  digitalInputTaskDefs.h  digitalOutputTaskDefs.h  mothSensorTaskDefs.h  rfSensorTaskDefs.h  usbSerialTaskDefs.h
Source_Code/Firmware/Inc/tasks/: analogInputTask.h  defaultTask.h  digitalInputTask.h  digitalOutputTask.h  mothSensorTask.h  radioFrequencyTask.h  rfSensorTask.h  usbSerialTask.h
Source_Code/Firmware/Src/: FreeRTOS-openocd.c  bootjump.c  freertos.c  gpio.c  i2c.c  i2s.c  main.c  spi.c  startup_stm32f411xe.S  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c  system_stm32f4xx.c
Source_Code/Firmware/Src/Utils/: jsmn.c  json_utils.c  systemConfig.c
Source_Code/Firmware/Src/tasks/: analogInputTask.c  defaultTask.c  digitalInputTask.c  digitalOutputTask.c  mothSensorTask.c  radioFrequencyTask.c  rfSensorTask.c  usbSerialTask.c
Source_Code/Linker/: STM32F411VETx_FLASH.ld
Source_Code/Middlewares/: CMakeLists.txt
Source_Code/Middlewares/ST/STM32_USB_Device_Library/: CMakeLists.txt
Source_Code/Middlewares/ST/STM32_USB_Device_Library/Class/CDC/: CMakeLists.txt
Source_Code/Middlewares/ST/STM32_USB_Device_Library/Core/: CMakeLists.txt
Source_Code/USB_Device/: CMakeLists.txt
Source_Code/USB_Device/App/: CMakeLists.txt
Source_Code/USB_Device/App/Inc/: usbd_cdc_if.h
Source_Code/USB_Device/App/Src/: usb_device.c  usbd_cdc_if.c
Sources/: preinclude.h
Src/: battery_task.c  main.c  tim.c
USB_Device/: CMakeLists.txt
cmake/: arm-none-eabi-toolchain.cmake  carl_utils.cmake
name_of_output_dir/: low_power_sensor_card.lss
objects/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
(+646 files in other folders)
